Fixed img overlay button z-index issue

--- a/views/public/css/main.css
+++ b/views/public/css/main.css
@@ -379,6 +379,7 @@ figure:hover img {
   animation-play-state: running;
 }
 figure:hover .overlay {
+  z-index: 101;
   opacity: 1;
 }
 figure:hover .overlay .buttons a {
